test/functions/iterators/errors/inconsistentYieldType.good
inconsistentYieldType.chpl:1: error: Can't determine type yielded by iterator
